--- a/Exercises/resume.html
+++ b/Exercises/resume.html
@@ -21,16 +21,16 @@
         </style>
     </head>
     <body>
-        <table>
-            <tr>
-                <td style="width: 200px;"> <img src="https://media.cnn.com/api/v1/images/stellar/prod/231018122237-02-house-speaker-race-101823.jpg" width="200px" height="250px" alt="alt"/> </td>
-                <td >
+ 
+            <div>
+                <div style="width: 200px;"> <img src="https://media.cnn.com/api/v1/images/stellar/prod/231018122237-02-house-speaker-race-101823.jpg" width="200px" height="250px" alt="alt"/> </td>
+                <div >
                     
                     <h1 style="font-family: sans-serif; color: #009900; font-weight: bold; text-align: right;"> Mostafizur Rahman</h1>
                     <p style="cursor: pointer"> <a href="https://www.w3schools.com/" >email: milon@liit.com </a> </p>
                     
-                </td>
-            </tr>
+                </div>
+            </div>
             <tr>
                 <td colspan="2" > 
                     <b> Profile Summary:</b> <br>
