--- a/1.6.1.html
+++ b/1.6.1.html
@@ -1,5 +1,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
+        <title></title>
         <meta charset="utf-8"/>
         <style>
             div {
@@ -8,108 +9,148 @@
                 border: 3px solid black;
             }
         </style>
-    <script>
-            <!-- var txt = "my long string"; -->
-<!-- var num = 5; -->
+        <script>
+            var txt = "my long string";
+            var num = 5;
+            var index = txt.indexOf("long", 0);
+            //alert('Index of ' + index);
+            var exp = num.toExponential(2);
+            //alert('Exponential ' + exp);
+            var txt = new String("Oscar Ortiz");
+            var num = new Number(2);
+            //alert('txt  ' + txt);
+            //alert('num ' + num);
 
-<!-- var index = txt.indexOf("long",0); -->
-<!-- alert('Index of ' + index); -->
-<!-- var exp = num.toExponential(2); -->
-<!-- alert('Exponential ' + exp); -->
+            var book = {
+                ISBN: "55555555",
+                Length: 560,
+                genre: "programming",
+                covering: "soft",
+                author: "John Doe",
+                currentPage: 5,
+                title: "My Big Book of Wonderful Things",
+                flipTo: function flipToAPage(pNum) {
+                    this.currentPage = pNum;
+                    //alert('flipToAPage  ' + pNum);
+                },
+                turnPageForward: function turnForward() {
+                    this.flipTo(this.currentPage++);
+                },
+                turnPageBackward: function turnBackward() {
+                    this.flipTo(this.currentPage--);
+                }
+            };
+            //alert('book  ' + book);
+            //alert('book  ' + book.author);
+            //This line throws an exception because the object does not support this method 
+            book.flipTo(15);
+            //alert('book  ' + book.flipTo(15));
 
-<!-- var txt = new String("Oscar Ortiz"); -->
-<!-- var num = new Number(2); -->
+            //This line works because this is what the method has been named.             
+            book.flipTo(15);
+            //alert('book  ' + book.flipTo(15));
 
-<!-- alert('txt  ' + txt); -->
-<!-- alert('num ' + num); -->
+            function Book() {
+                this.ISBN = "55555555";
+                this.Length = 560;
+                this.genre = "programming";
+                this.covering = "soft";
+                this.author = "John Doe";
+                this.currentPage = 5,
+                        this.flipTo = function FlipToAPage(pNum) {
+                            this.currentPage = pNum;
+                        };
+                this.turnPageForward = function turnForward() {
+                    this.flipTo(this.currentPage++);
+                };
+                this.turnPageBackward = function turnBackward() {
+                    this.flipTo(this.currentPage--);
+                };
+            }
+            var books = new Array(new Book(), new Book(), new Book());
+            alert(books[0].Length);
 
-<!-- var book = { -->
-<!-- ISBN:  "55555555", -->
-            < !-- Length: 560, -->
-<!-- genre: "programming", -->
-    <!-- covering: "soft", -->
-            <!-- author: "John Doe", -->
-<!-- currentPage: 5, -->
-<!-- title: "My Big Book of Wonderful Things", -->
-<!-- flipTo: function flipToAPage(pNum)  { -->
-            <!-- this.currentPage = pNum; -->
-<!-- }, -->
-<!--  turnPageForward: function turnForward() {  --> 
-            <!-- thi s.flipTo(this.currentPage++); -->
-            <!-- }, -->
-            <!-- turnPageBackward: function turnBackward() { --> 
-            <! -- this.fli pTo(t            his.current            Page--); -->
-            <!-- } -->
-            <!-- } -->
-    
-    <!-- <!-- alert('book  ' + book); --> -->
-            <!            -- <!-- alert('book  ' + book.author); --> -->
-
-            <!-- //This line throws an ex            ception because the object does            not support this method -->
-            <!-- book.F            lipToAPage(15); -->
-            <!-- //alert('book  ' + book.FlipToAPage(15            )); -->
-
-            <!--             //This line works because this is what the method has been named. -->
-                <!-- book.flipTo(15); -->            
-            <!-- //alert('b            ook  ' + book.flipTo(15)); -->
-
-<!--            function Book() { -->
-                      <!-- this.ISBN = "55555555"; -->
-            <!-- this.Length =             560; -->
-            <!-- this.genre= "programming";            -->
-            <!-- this.coverin            g = "soft";             -->
-            <!-- this.author = "John Doe"; -->
-                  <!-- this.currentPage = 5, -->
-                 <!--             this.flipTo = function FlipToAPage(pNum) { -->
-                        <!-- this.currentPage = pNum; -->
-                    <!-- },            -->
-                  <!-- this.turnPageForward = function turnForward() { -->
-                 <!-- this.flipTo(this.currentPage++); -->
-            <!-- }, -->
-            <!-- this.turnPageBackward = function turnBackward() { -->
-            <!-- this.flipTo(this.currentPage--); -->
-            <!-- } -->
-            <!-- } -->
-            <!-- var books = new Array(new Book(), new Book(), new Book()); -->
-            <!-- books[0].Length -->
-
-<!-- var book = { ISBN: "55555555", Length: 560, genre: "pr            ogramming", cove            ring: "soft", author: "John Doe"            ,             currentPage: 5, title: "My Big Book of Wonderful Things", flipTo: function flipToAPage(pNum) {this.curr            en            tPage = pNum; }, turnPageForward: function turnForward() { this.flipTo(this.currentPage++); }, turnPageBackward: function turnBackward() { this.flipTo(this.currentPage--); } } -->
+            var book = {
+                ISBN: "55555555",
+                Length: 560,
+                genre: "programming",
+                covering: "soft",
+                author: "John Doe",
+                currentPage: 5,
+                title: "My Big Book of Wonderful Things",
+                flipTo: function flipToAPage(pNum) {
+                    this.currentPage = pNum;
+                },
+                turnPageForward: function turnForward() {
+                    this.flipTo(this.currentPage++);
+                },
+                turnPageBackward: function turnBackward() {
+                    this.flipTo(this.currentPage--);
+                }
+            };
 
             function Book()
             {
 //just creates an empty book.
             }
             function Book(title, length, author) {
-this.titl            e = title;
-this.Length = length;
-this.author = author;
+                this.title = title;
+                this.Length = length;
+                this.author = author;
             }
+
             Book.prototype = {
-ISBN: "",
-Length: -1,
-genre: "",
-covering: "",
-author: "",
-currentPage: 0,
-title: "",
-flipTo: function FlipToAPage(pNum) {
-this.currentPage = pNum;
-},
-turnPageForward: function turnForward() {
-this.flipTo(this.currentPage++);
-},
-turnPageBackward: function turnBackward() {
-this.flipTo(this.currentPage--);
-}
+                ISBN: "",
+                Length: -1,
+                genre: "",
+                covering: "",
+                author: "",
+                currentPage: 0,
+                title: "",
+                flipTo: function FlipToAPage(pNum) {
+                    this.currentPage = pNum;
+                },
+                turnPageForward: function turnForward() {
+                    this.flipTo(this.currentPage++);
+                },
+                turnPageBackward: function turnBackward() {
+                    this.flipTo(this.currentPage--);
+                }
             };
-var books = new Array(new Book(), new Book("First Edition",350,"Random"));
+            var books = new Array(
+                    new Book(),
+                    new Book("First Edition", 350, "Random", )
+                    );
+
+            Object.create(Book.prototype, {color: 'red', hasSound: true});
+
+            car = {
+                door: 4,
+                make: y,
+                year: 2011,
+                seats: 5,
+            }
+            car.prototype = {
+                this.type = ''
+            };
+
+            new car();
 
 
-</script>
-</head>
-<body>
-<div id="Div1">DIV  1</div>
-<div id="Div2">DIV  2</div>
-<div id="Div3">DIV  3</div>
-</body>
+            function MyCar() {
+                car.call(this);
+            }
+
+            function PopUpBook() {
+                Book.call(this);
+            }
+
+
+        </script>
+    </head>
+    <body>
+        <!--div id="Div1">DIV  1</div>
+        <div id="Div2">DIV  2</div>
+        <div id="Div3">DIV  3</div-->
+    </body>
 </html>
